--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Pontos Turísticos pelo mundo</title>
+    <title>Pontos Turísticos</title>
 </head>
 
 <body>
@@ -15,25 +15,25 @@
         <aside id="flex1">
             <div class="texto">
                 <h1 class="font1">Álbum de Fotos</h1>
-                <h1 class="font1">Pontos turísticos</h1>
+                <h1 class="font1">Pontos Turísticos</h1>
             </div>
             <form id="form">
                 <fieldset id="fieldset1">
-                    <h2 class="font5">POSTE A FOTO DO SEUS</h2>
-                    <h2 class="font5">PONTOS TURÍSTICOS</h2>
+                    <h2 class="font5">POSTE A FOTO DE UM</h2>
+                    <h2 class="font5">PONTO TURÍSTICO</h2>
                     <br>
-                    <input type="text" name="title" id="title-form" placeholder="Informe o local da foto" required>
+                    <input type="text" name="title" id="title-form" placeholder="Nome do ponto turístico" required>
                     <input type="text" name="description" id="description-form" placeholder="Descrição" required>
                     <input type="text" name="url" id="url-form" placeholder="URL da imagem">
                     <br>
                     <h2 class="font5">Em relação a esse local:</h2>
-                    <div class="font7">
-                        <input type="radio" name="option" value="Já visitei esse local.">Já Fui</input>
-                        <input type="radio" name="option" value="Ainda não conheço esse local">Nunca Fui</input>
-                        <input type="radio" name="option" value="Não pretendo conhecer esse local">Nunca Irei</input>
+                    <div class="font6">
+                        <input type="radio" name="option" value="Já conheço esse ponto turístico">Já Fui</input>
+                        <input type="radio" name="option" value="Ainda não conheço esse ponto turístico">Nunca Fui</input>
+                        <input type="radio" name="option" value="Não pretendo conhecer ponto turístico">Nunca Irei</input>
                     </div>
-                    <div id="font8">
-                        <input type="checkbox" id="condicoes"> Concordo com os termos de uso desse site </input>
+                    <div id="font7">
+                        <input type="checkbox" id="condicoes">Concordo com os termos de uso</input>
                     </div>
                 </fieldset>
 
@@ -50,7 +50,7 @@
     <script src="js/script.js"></script>
 
     <footer id="footer">
-        <p>Check Point 1 em 11/11/2021</p>
+        <p>Anna Karla, Daniel Alves e Ricardo Ramalho</p>
     </footer>
 </body>
 
